fix: improve article image on mobile

--- a/static/css/site.css
+++ b/static/css/site.css
@@ -240,6 +240,8 @@ code {
 @media (max-width: 768px) {
   .article-image {
     height: 15rem;
+    align-items: center;
+    justify-content: center;
   }
 }
 
